# pr-reviewer-service

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  locustfile.py  pyproject.toml  pytest.ini
app/: __init__.py  main.py
app/api/: deps.py
app/api/routers/: __init__.py  pull_request_router.py  team_router.py  user_router.py
app/core/: config.py  depends.py  exceptions.py  server.py
app/core/db/: __init__.py  base.py  connect.py
app/migrations/: script.py.mako
app/migrations/versions/: 0001_init.py
app/models/: __init__.py  pr_reviewers.py  pull_requests.py  teams.py  users.py
app/repositories/: __init__.py  pull_request_repository.py  team_repository.py  user_repository.py
app/schemas/: __init__.py  pr_shema.py  pull_request_shema.py  team_shema.py  user_shema.py
app/services/: __init__.py  pull_request_service.py  team_service.py  user_service.py
docs/: app-schema.md  db-schema.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_init.py  0002_fix_col_user.py
tests/e2e/: conftest.py  test_pr_flow.py  test_users_and_teams.py
tests/unit/repositories/: conftest.py  test_pull_request_repository.py  test_team_repository.py  test_user_repository.py
tests/unit/services/: test_pull_request_service.py  test_team_service.py  test_user_service.py
